--- a/Sneak Game/index.html
+++ b/Sneak Game/index.html
@@ -28,6 +28,19 @@
     <div class="circle">
       <canvas id="stage" width="600" height="600"></canvas>
     </div>
+    
+    <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <div class="animation">
+      <lottie-player
+      src="https://assets5.lottiefiles.com/datafiles/l2wP2eVNuQZTnHt/data.json"
+      background="transparent"
+      speed="1"
+      style="width: 300px; height: 300px;"
+      loop
+      autoplay
+    ></lottie-player> -->
+
+    </div>
     <script type="text/javascript">
       window.onload = function () {
         var mensagem = document.getElementById("frase");
