--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <canvas id="stage" width="600" height="600"></canvas>
     </div>
 
-    <script src="game.js"> 
+    <script src="game.js"></script> 
     </div>
    
   </body>
