--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <div class="w-b" id="s"><h3>s</h3></div>
       <div class="w-b" id="d"><h3>d</h3></div>
     </div>
+    
+    <img id="wave" src="wave.svg">
+
     <div class="circle">
       <canvas id="stage" width="600" height="600"></canvas>
     </div>
