--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Snake Game</title>
   </head>
   <body>
-    <h1 class="title">Lara te amo</h1>
-    <h1 class="title-back">Lara te amo</h1>
+    <h1 class="title">Snake Game</h1>
+    <h1 class="title-back">Snake Game</h1>
     <p class="description">
       Game created to learn more about JavaScript. Press space button to start
       To move use:
