--- a/index.html
+++ b/index.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="home.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake Game</title>
+    <script defer src="./src/js/script.js"></script>
+    <link rel="stylesheet" href="./src/css/home.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1 class="title">Snake Game</h1>
+
     <h1 class="title-back">Snake Game</h1>
-    <p class="description">
-      Game created to learn more about JavaScript. Press space button to start
-      To move use:
-    </p>
 
     <div class="info">
-      <h1 id="frase"></h1>
-      <h1 id="pontos"></h1>
+      <h1 id="pontos">0</h1>
+      <h1 id="frase">Use as setas do teclado para se mover</h1>
     </div>
 
-    <div class="buttons">
-      <div class="w-b" id="w"><h3>w</h3></div>
-      <div class="w-b" id="a"><h3>a</h3></div>
-      <div class="w-b" id="s"><h3>s</h3></div>
-      <div class="w-b" id="d"><h3>d</h3></div>
-    </div>
-    
-    <img id="wave" src="wave.svg">
+    <button id="button" onclick="resetGame()">Reiniciar</button>
+
+    <img id="wave" src="./src/screen/wave.svg" />
 
     <div class="circle">
-      <canvas id="stage" width="600" height="600"></canvas>
+      <canvas id="stage" width="512" height="512"></canvas>
     </div>
-
-    <script src="game.js"></script> 
-    </div>
-   
   </body>
 </html>
