--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Snake Game</title>
+    <link
+      rel="shortcut icon"
+      href="./src/screen/snake.svg"
+      type="image/x-icon"
+    />
     <script defer src="./src/js/script.js"></script>
     <link rel="stylesheet" href="./src/css/home.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
